syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.google.startupos.tools.reviewer.localserver";
option java_outer_classname = "CodeReviewProto";

package localserver;

service CodeReviewService { rpc getFile(FileRequest) returns (FileResponse); }

message FileRequest { string filename = 1; }

message FileResponse { string content = 1; }